# seller_project

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  ozon-0.1.0-py3-none-any.whl  pyproject.toml
seller_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
seller_project/finance/: apps.py  models.py  views.py
seller_project/finance/migrations/: 0001_initial.py  0002_remove_financemodel_price_and_more.py  0003_financemodel_price_and_more.py  0004_alter_financemodel_price_and_more.py  0005_financemonthmodel.py
seller_project/markets/: apps.py  models.py
seller_project/markets/migrations/: 0001_initial.py
seller_project/orders/: apps.py  forms.py  models.py  views.py
seller_project/orders/migrations/: 0001_initial.py  0002_ordersmodel_actually_finished.py  0003_ordersmodel_canceled.py  0004_alter_ordersmodel_order_number.py  0005_ordersmodel_is_printed.py
seller_project/products/: apps.py  models.py
seller_project/products/migrations/: 0001_initial.py
templates/: base.html
templates/finance/: index.html  report.html
templates/orders/: all_orders.html  delete.html  detail.html  index.html  update.html
